Allow options override in Transforms created by ctor.
Add tests/docs for ctor

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "tape": "~1.0.4",
-    "bl": "~0.2.0"
+    "bl": "~0.2.0",
+    "stream-spigot": "~2.0.0"
   }
 }
