--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "author": "Rod Vagg <r@va.gg> (https://github.com/rvagg)",
   "license": "MIT",
   "dependencies": {
-    "readable-stream": "~1.0.2"
+    "readable-stream": "~1.0.2",
+    "xtend": "~2.0.6"
   },
   "devDependencies": {
     "tape": "~1.0.4",
