--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: node_js
 node_js:
-  - "0.8"
-  - "0.10"
-  - "0.11"
+- '0.8'
+- '0.10'
+- '0.11'
 branches:
   only:
-    - master
+  - master
 notifications:
   email:
-    - rod@vagg.org
+  - rod@vagg.org
 script: npm test
 env:
   global:
   - SAUCE_USER=through2-sauce
-  - secure: "iyAS90hY+Yk8MTOhFs4ILoL4CUFk4o4MD1U8+FVbOvwqdBgbUyqKXSaA0yFutJIA2WLVcgs2vUYKkEYSjfDNvOJtk07TtlJjnHoSVOlrecDaFKdOeA3/+d+pGe4mQ2b6lmiHh3XD1A0+XhmzY7kjcFyn6xRPN8Fqfjm8PMq9aC8="
+  - secure: A8KyygIlklZOcTwTGhZHpkOu7Cn4tI1QQasg75CTSjudczGzkuh1pG2RDIkWqGcrWv9o5CjI6fFYYx0JvQu8o5PO+ZAtV1Z0AlnM965vE8kAx0XEC7giAV323bibfnHwyQu74vIhbOfdes7E4/cYerV2kAjK0T375D4DYEpDuvw=
