--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "tape": "~2.3.0",
     "bl": "~0.6.0",
-    "stream-spigot": "~3.0.1"
+    "stream-spigot": "~3.0.1",
+    "brtapsauce": "~0.2.2"
   }
 }
