--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
   "author": "Rod Vagg <r@va.gg> (https://github.com/rvagg)",
   "license": "MIT",
   "dependencies": {
-    "readable-stream": "~1.0.17",
-    "xtend": "~3.0.0"
+    "readable-stream": ">=1.0.27-1 <1.1.0-0",
+    "xtend": ">=4.0.0 <4.1.0-0"
   },
   "devDependencies": {
-    "tape": "~2.3.0",
-    "bl": "~0.6.0",
-    "stream-spigot": "~3.0.1",
-    "brtapsauce": "~0.2.2"
+    "bl": ">=0.9.0 <0.10.0-0",
+    "stream-spigot": ">=3.0.4 <3.1.0-0",
+    "tape": ">=2.14.0 <2.15.0-0"
   }
 }
