--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "author": "Rod Vagg <r@va.gg> (https://github.com/rvagg)",
   "license": "MIT",
   "dependencies": {
-    "readable-stream": "~2.0.0",
-    "xtend": "~4.0.0"
+    "readable-stream": "^2.1.5",
+    "xtend": "~4.0.1"
   },
   "devDependencies": {
-    "bl": "~0.9.4",
+    "bl": "~1.1.2",
     "faucet": "0.0.1",
     "stream-spigot": "~3.0.5",
-    "tape": "~4.0.0"
+    "tape": "~4.6.2"
   }
 }
