--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A tiny wrapper around Node streams2 Transform to avoid explicit subclassing noise",
   "main": "through2.js",
   "scripts": {
-    "test": "nyc node test/test.js | faucet && nyc report"
+    "test": "node test/test.js | faucet"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,14 @@
   "author": "Rod Vagg <r@va.gg> (https://github.com/rvagg)",
   "license": "MIT",
   "dependencies": {
-    "readable-stream": "2 || 3",
+    "readable-stream": "~2.3.6",
     "xtend": "~4.0.1"
   },
   "devDependencies": {
     "bl": "~2.0.1",
     "faucet": "0.0.1",
     "nyc": "~13.1.0",
+    "safe-buffer": "~5.1.2",
     "stream-spigot": "~3.0.6",
     "tape": "~4.9.1"
   }
