--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "Rod Vagg <r@va.gg> (https://github.com/rvagg)",
   "license": "MIT",
   "dependencies": {
-    "readable-stream": "2 || 3"
+    "readable-stream": "^3.0.0"
   },
   "devDependencies": {
     "bl": "~2.0.1",
