--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Rod Vagg <r@va.gg> (https://github.com/rvagg)",
   "license": "MIT",
   "dependencies": {
+    "inherits": "^2.0.4",
     "readable-stream": "2 || 3"
   },
   "devDependencies": {
