--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A tiny wrapper around Node.js streams.Transform (Streams2/3) to avoid explicit subclassing noise",
   "main": "through2.js",
   "scripts": {
-    "test": "nyc node test/test.js | faucet && nyc report"
+    "test": "npm run lint && hundreds node test/test.js",
+    "lint": "standard",
+    "coverage": "c8 --reporter=text --reporter=html node test/test.js && npx st -d coverage -p 8888"
   },
   "repository": {
     "type": "git",
@@ -23,10 +25,10 @@
     "readable-stream": "2 || 3"
   },
   "devDependencies": {
-    "bl": "~2.0.1",
-    "faucet": "0.0.1",
-    "nyc": "~13.1.0",
-    "stream-spigot": "~3.0.6",
-    "tape": "~4.9.1"
+    "bl": "^4.0.2",
+    "hundreds": "~0.0.7",
+    "standard": "^14.3.4",
+    "stream-spigot": "^3.0.6",
+    "tape": "^5.0.1"
   }
 }
