--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "bl": "^4.0.2",
+    "buffer": "^5.6.0",
     "chai": "^4.2.0",
     "hundreds": "~0.0.7",
     "mocha": "^7.2.0",
