--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "through",
     "transform"
   ],
+  "engines": {
+    "node": ">=12.20.0"
+  },
   "author": "Rod Vagg <r@va.gg> (https://github.com/rvagg)",
   "license": "MIT",
   "devDependencies": {
